<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/common_test_btn_scrollView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0, 1, 2">

            <Button
                android:id="@+id/common_test_clear_btn"
                style="@style/CommonTestButtonStyle"
                android:text="@string/test_clear" />

            <TableRow>

                <Button
                    android:id="@+id/common_test_btn_1"
                    style="@style/CommonTestButtonStyle"
                    android:text="@string/test_btn_1" />

                <Button
                    android:id="@+id/common_test_btn_2"
                    style="@style/CommonTestButtonStyle"
                    android:text="@string/test_btn_2" />

                <Button
                    android:id="@+id/common_test_btn_3"
                    style="@style/CommonTestButtonStyle"
                    android:text="@string/test_btn_3" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/common_test_btn_4"
                    style="@style/CommonTestButtonStyle"
                    android:text="@string/test_btn_4" />

                <Button
                    android:id="@+id/common_test_btn_5"
                    style="@style/CommonTestButtonStyle"
                    android:text="@string/test_btn_5" />

                <Button
                    android:id="@+id/common_test_btn_6"
                    style="@style/CommonTestButtonStyle"
                    android:text="@string/test_btn_6" />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/common_test_text_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/common_test_btn_scrollView"
        android:padding="@dimen/comm_padding"
        android:orientation="vertical">
        <TextView
            android:id="@+id/common_test_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"/>
    </ScrollView>
</android.support.constraint.ConstraintLayout>