<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/page_socket"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/content_socket_text_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/content_socket_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <ScrollView
        android:id="@+id/content_socket_function_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2">
            <TableRow>
                <Button
                    android:id="@+id/content_socket_connect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"/>
                <Button
                    android:id="@+id/content_socket_disconnect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnect"/>
                <Button
                    android:id="@+id/content_socket_debug_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_debug"/>
            </TableRow>
        </TableLayout>
    </ScrollView>


</LinearLayout>