<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/fab_margin">

    <TableLayout
        android:id="@+id/test_tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/test_testBtn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_1" />

            <Button
                android:id="@+id/test_testBtn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_2" />

            <Button
                android:id="@+id/test_testBtn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_3" />

        </TableRow>
    </TableLayout>
    <ScrollView
        android:id="@+id/test_scrollView"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/test_tableLayout">

        <TextView
            android:id="@+id/test_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>